Refactor API mapping in ProposedBillApiMapper.